force-app/main/default/objects/FEC_Routing_Assignment__c/FEC_Routing_Assignment__c.object-meta.xml
<CustomObject>
    <label>Routing Assignment</label>
    <nameField>
        <displayFormat>RA - {0}</displayFormat>
        <label>RA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>