force-app/main/default/objects/FEC_Routing_Assignment__c/fields/FEC_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>