force-app/main/default/objects/FEC_Routing_Assignment__c/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <description>Thông tin về kênh được áp dụng cấu hình Routing Assignment</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>