force-app/main/default/objects/FEC_Routing_Assignment__c/fields/FEC_Nature_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_of_Cases__c</fullName>
    <label>Nature of Cases</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>Routing Assignment</relationshipLabel>
    <relationshipName>Routing_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>