force-app/main/default/objects/FEC_Routing_Assignment__c/fields/FEC_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Queue__c</fullName>
    <description>Field type = picklist
Thông tin Queue của Routing Assignment được xác định tương ứng với Team đã chọn ở bước trước</description>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>