force-app/main/default/objects/FEC_Routing_Assignment__c/fields/FEC_Team__c.field-meta.xml
<CustomField>
    <fullName>FEC_Team__c</fullName>
    <description>Hiển thị danh sách các Team đã được cấu hình để chuyển Case tới</description>
    <label>Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>