force-app/main/default/objects/FEC_Routing_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Team__c</columns>
    <columns>FEC_Queue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>